After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 693659 - Toggling the "Automatic" switch does not activate "Apply"
Toggling the "Automatic" switch does not activate "Apply"
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
3.7.x
Other Linux
: Normal minor
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
: 693782 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-02-12 16:20 UTC by Mantas Mikulėnas (grawity)
Modified: 2013-02-14 19:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
network: mark connection editor changed when editing IPv4/IPv6 pages (4.69 KB, patch)
2013-02-13 20:25 UTC, Dan Winship
committed Details | Review
network: fix initial sensitivity of editor "Add" button (1.15 KB, patch)
2013-02-13 20:25 UTC, Dan Winship
committed Details | Review

Description Mantas Mikulėnas (grawity) 2013-02-12 16:20:50 UTC
While editing a WiFi or Ethernet connection:

When I turn off the "DNS – Automatic" or "Routes – Automatic" switches, the dialog's "Apply" button remains inactive and does not allow me to save the changes.
Comment 1 Dan Winship 2013-02-13 20:25:21 UTC
Created attachment 235951 [details] [review]
network: mark connection editor changed when editing IPv4/IPv6 pages

When this got rewritten to be different from nm-connection-editor's,
the ce_page_changed() calls accidentally got dropped, so most changes
on these pages would not cause the "Apply" button to become sensitive.
Comment 2 Dan Winship 2013-02-13 20:25:37 UTC
Created attachment 235952 [details] [review]
network: fix initial sensitivity of editor "Add" button

The "only make Apply/Add sensitive if something changed" rule should
not apply to new connections; they are already "changed".

[Special bonus fix for Matthias]
Comment 3 Matthias Clasen 2013-02-14 03:24:56 UTC
Review of attachment 235951 [details] [review]:

looks right
Comment 4 Matthias Clasen 2013-02-14 03:25:25 UTC
Review of attachment 235952 [details] [review]:

yay, thanks
Comment 5 Matthias Clasen 2013-02-14 19:39:34 UTC
*** Bug 693782 has been marked as a duplicate of this bug. ***
Comment 6 Dan Winship 2013-02-14 19:43:59 UTC
Attachment 235951 [details] pushed as 5109980 - network: mark connection editor changed when editing IPv4/IPv6 pages
Attachment 235952 [details] pushed as dcb932b - network: fix initial sensitivity of editor "Add" button