network: mark connection editor changed when editing IPv4/IPv6 pages

When this got rewritten to be different from nm-connection-editor's,
some of the ce_page_changed() calls accidentally got dropped, so
certain changes on these pages would not cause the "Apply" button to
become sensitive.

https://bugzilla.gnome.org/show_bug.cgi?id=693659