panels/network/connection-editor/ce-page-ip4.c
@@ -85,6 +85,14 @@ method_changed (GtkComboBox *combo, CEPageIP4 *page)
 }
 
 static void
+switch_toggled (GObject    *object,
+                GParamSpec *pspec,
+                CEPage     *page)
+{
+        ce_page_changed (page);
+}
+
+static void
 update_separator (GtkWidget **separator,
                   GtkWidget  *child,
                   GtkWidget  *before,
@@ -397,6 +405,7 @@ add_dns_section (CEPageIP4 *page)
         gtk_container_add (GTK_CONTAINER (frame), list);
         page->auto_dns = GTK_SWITCH (gtk_builder_get_object (CE_PAGE (page)->builder, "auto_dns_switch"));
         gtk_switch_set_active (page->auto_dns, !nm_setting_ip4_config_get_ignore_auto_dns (page->setting));
+        g_signal_connect (page->auto_dns, "notify::active", switch_toggled, page);
 
         add_section_toolbar (page, widget, G_CALLBACK (add_empty_dns_row));
 
@@ -535,6 +544,7 @@ add_routes_section (CEPageIP4 *page)
         gtk_container_add (GTK_CONTAINER (frame), list);
         page->auto_routes = GTK_SWITCH (gtk_builder_get_object (CE_PAGE (page)->builder, "auto_routes_switch"));
         gtk_switch_set_active (page->auto_routes, !nm_setting_ip4_config_get_ignore_auto_routes (page->setting));
+        g_signal_connect (page->auto_routes, "notify::active", switch_toggled, page);
 
         add_section_toolbar (page, widget, G_CALLBACK (add_empty_route_row));
 
@@ -588,6 +598,7 @@ connect_ip4_page (CEPageIP4 *page)
         add_routes_section (page);
 
         page->enabled = GTK_SWITCH (gtk_builder_get_object (CE_PAGE (page)->builder, "switch_enable"));
+        g_signal_connect (page->enabled, "notify::active", switch_toggled, page);
 
         str_method = nm_setting_ip4_config_get_method (page->setting);
         disabled = g_strcmp0 (str_method, NM_SETTING_IP4_CONFIG_METHOD_DISABLED) == 0;
